tests/baselines/reference/arguments.errors.txt
arguments.ts(6,8): error TS2304: Cannot find name 'arguments'.
arguments.ts(9,25): error TS2304: Cannot find name 'arguments'.
arguments.ts(10,23): error TS2304: Cannot find name 'arguments'.
arguments.ts(11,19): error TS2304: Cannot find name 'arguments'.
arguments.ts(12,23): error TS2304: Cannot find name 'arguments'.
arguments.ts(13,34): error TS2304: Cannot find name 'arguments'.


==== arguments.ts (6 errors) ====
    function f() {
        var x=arguments[12];
        (() => arguments)();
    }
    
    (() => arguments)();
           ~~~~~~~~~
!!! error TS2304: Cannot find name 'arguments'.
    
    interface I {
        method(args: typeof arguments): void;
                            ~~~~~~~~~
!!! error TS2304: Cannot find name 'arguments'.
        fn: (args: typeof arguments) => void;
                          ~~~~~~~~~
!!! error TS2304: Cannot find name 'arguments'.
        (args: typeof arguments): void;
                      ~~~~~~~~~
!!! error TS2304: Cannot find name 'arguments'.
        new (args: typeof arguments): void;
                          ~~~~~~~~~
!!! error TS2304: Cannot find name 'arguments'.
        construct: new (args: typeof arguments) => void;
                                     ~~~~~~~~~
!!! error TS2304: Cannot find name 'arguments'.
    }